infra/security.tf
resource "aws_security_group" "one_project" {
  name        = "one-project-sg"
  description = "Allow HTTP 80 and RDP 3389 from the internet"
  vpc_id      = data.aws_vpc.default.id
  tags        = merge(var.tags, { Name = "one-project-sg" })

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.http_cidr]
  }

  ingress {
    description = "RDP"
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = [var.rdp_cidr]
  }

  egress {
    description = "All egress"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
